service_blue.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service-blue
spec:
  selector:
    run: app
    app: blue
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
