service_green.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service-green
spec:
  selector:
    app: green
    run: app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
