service_test.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service-green
spec:
  selector:
    run: app
    version: 0.0.2
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
